# excel-pptx-merger

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  MERGE_ENDPOINT_DUAL_MODE.md  RANGE_IMAGE_DEBUGGING.md  README.md  README_RANGE_IMAGES.md  Search Template Update Config.json  clear_cache.py  cloudbuild.yaml  deploy.sh  example_update_config.json  example_update_data.json  final_fixed_replacement.py  fixed_merge_replacement.py  generate_postman_payload.py  main.py  multi-tab.json  postman_payload.json  powerpoint_corruption_analysis.md  pyproject.toml  requirements.txt  test_cloud_function_fix.py  test_file_image_data.json  test_file_image_update.py  test_final_fix.py  test_fix_in_production.py  test_fixed_replacement.py  test_merge_json.sh  test_merge_json_mode.py  test_preserve_images.py  test_update_api.py  update_config.json
config/: default_config.json  development.env  formula_calculation_test_config.json  graph_api_template.env  pricing_matrix_config.json  production.env  range_images_example_config.json  sharepoint_example_config.json  testing.env
docker/: Dockerfile  docker-compose.yml
docs/: 413_error_investigation_plan.md  API_UPDATE_ENDPOINT.md  CRM_COMPATIBILITY_GUIDE.md  EXCEL_RANGE_IMAGES_USAGE.md  FEATURE_EXCEL_RANGE_IMAGES.md  FEATURE_EXCEL_UPDATE.md  SECURE_CREDENTIALS_SETUP.md  TROUBLESHOOTING_GUIDE.md  claude_code_setup_prompt.md  cloud_deployment.md  excel_pptx_merger_prd.md  gcloud-job-queue-implementation.md  merge_field_mapping.md  powerpoint-features-implementation-plan.md  unlimited-row-update-implementation.md  (+1 more)
(+258 files in other folders)
