[project]
name = "excel-pptx-merger"
version = "0.1.0"
description = "Excel to PowerPoint Merger service for extracting data from Excel files and merging into PowerPoint templates"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
    "Flask>=2.3.0",
    "functions-framework>=3.4.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "jsonschema>=4.17.0",
    "click>=8.1.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-logging>=3.8.0",
    "openpyxl-image-loader>=1.0.5",
    "xlrd2>=1.3.4",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
]

[project.scripts]
excel-pptx-merger = "src.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing --cov-report=html"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
